fixed spacing bug in the main page

--- a/styles/smallscreen.css
+++ b/styles/smallscreen.css
@@ -86,7 +86,7 @@ html, body{
     
 }
 
-.destination_item a{
+#destination_link{
     color: white;
 }
 
@@ -105,7 +105,7 @@ html, body{
     /* background-attachment: absolute; */
     /* background-repeat: no-repeat center; */
     width: 100%;
-    height: 100%;
+    height: 33.33vh;
     object-fit: fill;
     -o-object-position: center center;
     object-position: center center;
